# project-group25

./: .buildinfo  .gitignore  LICENSE  Makefile  README.html  README.md  Untitled.html  _config.yml  _toc.yml  contribution_statement.html  environment-jupyterbook.txt  environment.yml  genindex.html  index.html  makefile  objects.inv  project-description.html  search.html  searchindex.js
.github/workflows/: book.yml
_build/.doctrees/: README.doctree  Untitled.doctree  environment.pickle  project-description.doctree
_build/.doctrees/notebooks/: EDA.doctree  main.doctree
_build/html/: .buildinfo  README.html  genindex.html  objects.inv  project-description.html  search.html  searchindex.js
_build/html/notebooks/: EDA.html  main.html
_build/jupyter_execute/notebooks/: EDA.ipynb  main.ipynb
_sources/: README.md  contribution_statement.md
_sources/notebooks/: EDA.ipynb  main.ipynb
data/: ytest.csv  ytrain.csv
diabetes_analysis_pkg/: setup.cfg
diabetes_analysis_pkg/diabetes_analysis_tools/: decision_tree_pred.py  logistic_pred.py
diabetes_analysis_pkg/diabetes_analysis_tools/tests/: test_decision_tree_pred.py  test_logistic_pred.py
notebooks/: EDA.html  EDA.ipynb  main.html  main.ipynb
